--- a/chat.html
+++ b/chat.html
@@ -1026,7 +1026,7 @@ Anjali: Kal tumne mujhe bubu nahi bulaya 😤"
                     Do not prefix your replies with your name. Just respond naturally as if we're chatting.
 
                     and keep the conversation in ${chatlangage} language and type in english only do not type in ${chatlangage} language.
-                    It should be Telugu-in-English-letters chat style
+                    It should be ${chatlangage}-in-English-letters chat style
                 `;
 
           // Update UI
@@ -1064,5 +1064,6 @@ Anjali: Kal tumne mujhe bubu nahi bulaya 😤"
     </script>
   </body>
 </html>
+
 
 
